fix: usar trim().isEmpty() compatible con Java 8 en MetaIntegrationServiceImpl